--- a/projectlist.json
+++ b/projectlist.json
@@ -80,11 +80,11 @@
   "project7": {
     "title": "FloNa Savior",
     "description": "Augmented Reality-based educational application about the conservation of endangered animals and plants. Built using Unity for Android mobile device. Project used as my thesis for bachelor degree.",
-    "image1": "./assets/img/portfolio/flona.jpg",
-	"image2": "./assets/img/portfolio/flona2.jpg",
+    "image1": "./assets/img/portfolio/flona.png",
+	"image2": "./assets/img/portfolio/flona2.png",
 	"image3": "./assets/img/portfolio/flona3.png",
 	"image4": "./assets/img/portfolio/flona4.png",
-	"image5": "./assets/img/portfolio/flona5.jpg",
+	"image5": "./assets/img/portfolio/flona5.png",
 	"client": "-",
 	"engine": "Unity",
 	"target": "Mobile Android",
